<resources>
    <string name="app_name">RoomTest</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="delete">Delete</string>
    <string name="back">Back</string>
    <string name="add_note">Add Note</string>
</resources>